--- a/development/index.ejs
+++ b/development/index.ejs
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no" />
   <meta charset="utf-8" />
-  <title>Dynamic Ads</title>
+  <title>react-rotatable</title>
 </head>
 <body>
 <div id="app"></div>
